--- a/2d_game_browser/style.css
+++ b/2d_game_browser/style.css
@@ -26,7 +26,7 @@ body {
   position: relative;
   top: 140px;
   left: 100%;
-  /* animation: blockMove 2s infinite linear; */
+  animation: blockMove 2s infinite linear;
 }
 
 @keyframes blockMove {
@@ -58,4 +58,11 @@ body {
   100% {
     top: 240px;
   }
+}
+
+.counter {
+  text-shadow: 5px 5px 5px #000000f3, 0 0 1em blue, 0 0 0.1em blue;
+  font-size: 50px;
+  text-align: left;
+  margin: 10px;
 }
